--- a/guides/core-testing-workflows/using-assertions-effectively.mdx
+++ b/guides/core-testing-workflows/using-assertions-effectively.mdx
@@ -1,273 +1,276 @@
 ---
 title: "Using Assertions Effectively"
-description: "A practical guide to the wide variety of assertions in GoogleTest, demonstrating how to select the right assertion for different test cases and tips for clear failure messages. The page also highlights user-defined assertions and best practices."
+description: "Guide to GoogleTest's rich assertion set—what's available, how to choose the right assertions for various test scenarios (equality, exceptions, predicates, matchers), and structuring expressive, readable tests."
 ---
 
 # Using Assertions Effectively
 
-Harness the full power of GoogleTest assertions to create clear, concise, and robust test validations. This guide walks you through the diverse categories of assertions, helping you select the most appropriate one for your test scenarios, craft expressive failure messages, and apply user-defined assertions to enhance clarity and maintainability.
+## Overview
+This guide provides an in-depth look at GoogleTest's rich set of assertion macros and techniques. You will learn how to pick the right assertion for your test scenarios, from simple Boolean checks and comparisons to advanced predicates and exception assertions. The goal is to help you write clear, expressive, and maintainable tests that precisely and informatively verify your code’s behavior.
 
 ---
 
-## 1. Understanding Assertion Types and Their Use Cases
+## 1. Understanding Assertion Types and Selection
 
-Before diving into code, it's vital to recognize the variety of assertions GoogleTest offers and why each matters:
+GoogleTest assertions are the primary way to verify that your code behaves as expected. Choosing the right assertion impacts the readability of your tests and the clarity of failure messages.
 
-- **Nonfatal vs Fatal Assertions:**
-  - **`EXPECT_` assertions** produce nonfatal failures, allowing the test function to continue after failure.
-  - **`ASSERT_` assertions** produce fatal failures, aborting the current test function immediately.
+### Assertion Behavior: EXPECT_ vs. ASSERT_
+- `EXPECT_*`: Generates a **nonfatal failure**. Test execution continues after the assertion.
+- `ASSERT_*`: Generates a **fatal failure** and aborts the current function immediately.
 
-Choosing between these boils down to your need to proceed after a failure or to abort early.
+Use `EXPECT_*` when the test can sensibly continue after failure to reveal additional issues, and `ASSERT_*` when continuing on failure is meaningless or unsafe.
 
-### Key Assertion Categories
+### Categories of Assertions
+- **Boolean Assertions:** Check simple conditions with `EXPECT_TRUE()`, `EXPECT_FALSE()`, and their assert counterparts.
+- **Binary Comparisons:** Use `EXPECT_EQ()`, `EXPECT_NE()`, `EXPECT_LT()`, etc., for two-value relational checks.
+- **String Comparisons:** For C strings, use `EXPECT_STREQ()`, `EXPECT_STRNE()`, and their case-insensitive variants.
+- **Floating Point Comparisons:** Use `EXPECT_FLOAT_EQ()`, `EXPECT_DOUBLE_EQ()`, or `EXPECT_NEAR()` to compare floating-point values considering precision issues.
+- **Exception Assertions:** Verify that your code throws or does not throw exceptions with `EXPECT_THROW()`, `EXPECT_NO_THROW()`, and `EXPECT_ANY_THROW()`.
+- **Predicate Assertions:** For complex or custom conditions, use `EXPECT_PRED*()` or `EXPECT_PRED_FORMAT*()` macros.
+- **Matcher-Based Assertions:** Use `EXPECT_THAT()` with gMock matchers for expressive and readable conditions involving complex objects or conditions.
 
-| Category | Description | When to Use |
-|---|---|---|
-| Boolean Conditions (`EXPECT_TRUE`, `EXPECT_FALSE`) | Verify a condition’s truth or falsity. | When the outcome is a simple logical condition. |
-| Binary Comparisons (`EXPECT_EQ`, `EXPECT_NE`, `EXPECT_LT`, etc.) | Compare two values using standard operators. | When testing for equality/inequality or ordering of values. |
-| String Comparisons (`EXPECT_STREQ`, `EXPECT_STRCASEEQ`, etc.) | Compare C-style string contents, including ignoring case. | When comparing null-terminated strings for exact value. |
-| Floating-Point Comparisons (`EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, `EXPECT_NEAR`) | Check approximate equality within acceptable error bounds. | Use for floating-point numbers to avoid pitfalls of rounding errors. |
-| Exception Assertions (`EXPECT_THROW`, `EXPECT_NO_THROW`, etc.) | Verify that code throws or doesn’t throw expected exceptions. | When testing exception safety or error handling paths (requires exceptions enabled). |
-| Predicate Assertions (`EXPECT_PRED*`, `EXPECT_PRED_FORMAT*`) | Use custom predicates or predicate-formatters for complex validations with better failure messages. | When validations exceed simple binary or boolean checks and you want detailed diagnostics. |
-| Death Assertions (`EXPECT_DEATH`, `EXPECT_EXIT`, etc.) | Confirm that a code snippet causes termination or a specific exit condition. | When your test validates fatal failure conditions such as program crashes or exit codes. |
+
+## 2. Writing Expressive Assertions
+
+### 2.1 Boolean Conditions
+Check that a condition is true or false:
+
+```cpp
+EXPECT_TRUE(is_valid) << "Validation failed";
+ASSERT_FALSE(has_error) << "Unexpected error occurred";
+```
+
+### 2.2 Binary Comparisons
+Ideal for value equality or relational checks:
+
+```cpp
+EXPECT_EQ(actual, expected) << "Values differ";
+ASSERT_LT(value, limit) << "Value exceeds limit";
+```
+
+**Tip:**
+- Use `EXPECT_STR*()` for C strings instead of `EXPECT_EQ()` which compares pointers.
+- Order your expressions as `EXPECT_EQ(actual, expected)` to align with failure messages.
+
+### 2.3 String Comparison Variants
+- Exact content equality: `EXPECT_STREQ(a, b)`
+- Not equal: `EXPECT_STRNE(a, b)`
+- Case-insensitive equal: `EXPECT_STRCASEEQ(a, b)`
+- Case-insensitive not equal: `EXPECT_STRCASENE(a, b)`
+
+```cpp
+const char* s1 = "Hello";
+const char* s2 = "hello";
+EXPECT_STRCASEEQ(s1, s2);
+```
+
+### 2.4 Floating-Point Assertions
+Floating point numbers should be compared with tolerance:
+
+```cpp
+EXPECT_FLOAT_EQ(f1, f2);       // For float
+ASSERT_DOUBLE_EQ(d1, d2);     // For double
+EXPECT_NEAR(val1, val2, epsilon);  // Custom error margin
+```
 
 ---
 
-## 2. Step-by-Step Guide to Choosing and Using Assertions
+## 3. Advanced Assertion Techniques
 
-### Step 1: Start Simple with Basic Assertions
+### 3.1 Predicate Assertions
+When simple binary assertions or `EXPECT_TRUE` are insufficient to produce clear failure messages, use predicate assertions.
 
-Use simple assertions like `EXPECT_EQ` or `ASSERT_TRUE` first. They keep your tests readable and maintainable.
+- `EXPECT_PRED1(predicate, val1)` through `EXPECT_PRED5(predicate, val1, ..., val5)`
+- The `predicate` is a function or functor returning `bool`.
+
+Example:
 
 ```cpp
-EXPECT_EQ(actual_value, expected_value) << "Detailed failure message";
-ASSERT_TRUE(is_valid) << "Expected valid condition";
+// Checks if two integers are mutually prime
+bool MutuallyPrime(int a, int b);
+
+EXPECT_PRED2(MutuallyPrime, val1, val2);
 ```
 
-- **Outcome:** If the assertion fails, the test logs the failure; with `EXPECT_`, it continues; with `ASSERT_`, it aborts the current test.
+If the assertion fails, you get values printed with the failure for diagnostic clarity.
 
-### Step 2: Use Specialized Assertions for Strings
+### 3.2 Predicate-Formatter Assertions
+For fully customized failure messages, use:
 
-For C-strings, avoid `EXPECT_EQ` since it compares pointers. Use `EXPECT_STREQ` or case-insensitive variants instead.
+- `EXPECT_PRED_FORMAT1(pred_formatter, val1)` through `EXPECT_PRED_FORMAT5(...)`
 
-```cpp
-EXPECT_STREQ(actual_cstr, expected_cstr);
-EXPECT_STRCASEEQ(actual_cstr, expected_cstr_case_insensitive);
-```
+`pred_formatter` is a function/functor returning `testing::AssertionResult`, which indicates success or failure and streams a custom message.
 
-- **Example:** Testing two `const char*` variables for identical content.
-
-### Step 3: Apply Floating-Point Assertions for Numerical Comparison
-
-Floating-point comparisons are tricky due to rounding and precision. Use:
-
-- `EXPECT_FLOAT_EQ` / `EXPECT_DOUBLE_EQ` for near equality based on 4 ULPs.
-- `EXPECT_NEAR(val1, val2, abs_error)` when you can specify custom error bounds.
+Example:
 
 ```cpp
-EXPECT_NEAR(computed_result, expected_result, 0.0001);
-```
-
-- **Success Criteria:** The difference does not exceed the specified error.
-
-### Step 4: Validate Exception Behavior
-
-If your function should throw (or not) certain exceptions, assert this explicitly.
-
-```cpp
-EXPECT_THROW({ CallThatThrows(); }, std::runtime_error);
-EXPECT_NO_THROW({ CallThatDoesNotThrow(); });
-```
-
-- Ensure exceptions are enabled in your build.
-
-### Step 5: Craft Complex Conditions Using Predicate Assertions
-
-When simple macros don’t express your logic or yield unclear messages, use predicate assertions.
-
-#### Boolean Predicate Assertions
-
-Define a predicate function:
-
-```cpp
-bool IsEven(int n) { return (n % 2) == 0; }
-EXPECT_PRED1(IsEven, val);
-```
-
-You get argument values printed on failure automatically.
-
-#### Predicate Formatter Assertions
-
-Write functions returning `testing::AssertionResult` to provide richer diagnostics:
-
-```cpp
-testing::AssertionResult IsMutuallyPrime(int m, int n) {
-  if (MutuallyPrime(m, n)) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << m << " and " << n << " are not mutually prime.";
+testing::AssertionResult AssertMutuallyPrime(const char* expr1, const char* expr2, int a, int b) {
+  if (MutuallyPrime(a, b)) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << expr1 << " and " << expr2 << " are not mutually prime";
 }
-EXPECT_PRED_FORMAT2(IsMutuallyPrime, a, b);
+
+EXPECT_PRED_FORMAT2(AssertMutuallyPrime, val1, val2);
 ```
 
-- This emits meaningful failure messages with argument details.
+This prints detailed failure messages including argument expressions and values.
 
-### Step 6: Use Matchers for Readable and Flexible Assertions
-
-Matchers let you express assertions as readable English-like statements and provide detailed failure info.
-
-- Use `EXPECT_THAT(value, matcher)` and `ASSERT_THAT(value, matcher)`.
-- Matchers live in gMock; examples: `StartsWith()`, `Contains()`, `Ge()`, `Lt()`, etc.
+### 3.3 Using gMock Matchers with `EXPECT_THAT`
+Matchers provide an expressive way to state expectations, and are especially useful with complex objects or container checks.
 
 ```cpp
-EXPECT_THAT(name, StartsWith("Hello"));
-EXPECT_THAT(number, AllOf(Ge(10), Le(20)));
-```
-
-- Matchers compose for multi-condition checks.
-
----
-
-## 3. Best Practices for Crafting Clear Failure Messages
-
-- Always provide custom failure messages with `<<` to add context.
-- Prefer nonfatal `EXPECT_` assertions unless failure requires an immediate stop.
-- Use predicate-formatters to clarify failures involving complex predicates.
-- Use `SCOPED_TRACE()` to add contextual trace when running subroutines or loops.
-
----
-
-## 4. User-Defined Assertions and Matchers
-
-GoogleTest enables users to write their own assertions for complex logic and richer failure messages.
-
-### Writing Simple Custom Matchers
-
-Use `MATCHER` macros for quick definitions:
-
-```cpp
-MATCHER(IsDivisibleBy7, "divisible by 7") {
-  return (arg % 7) == 0;
-}
-EXPECT_THAT(value, IsDivisibleBy7());
-```
-
-- The failure reports if `value` is not divisible by 7.
-
-### Writing Parameterized Matchers
-
-For matchers with parameters, use `MATCHER_P` or others:
-
-```cpp
-MATCHER_P(IsWithinRange, range, "is within range") {
-  return arg >= range.first && arg <= range.second;
-}
-EXPECT_THAT(x, IsWithinRange(std::make_pair(10, 20)));
-```
-
-### Writing Predicate-Formatters
-
-Custom predicates returning `AssertionResult` allow comprehensive failure explanation.
-
-Implement your own functions with signature:
-
-```cpp
-testing::AssertionResult MyPredicateFormatter(const char* expr1, const char* expr2, T1 val1, T2 val2);
-```
-
-They then get used in assertions like:
-
-```cpp
-EXPECT_PRED_FORMAT2(MyPredicateFormatter, val_a, val_b);
-```
-
----
-
-## 5. Common Pitfalls and How to Avoid Them
-
-- Avoid using `ASSERT_*` in non-void functions; fatal failures require void return functions.
-- Beware of side-effects in assertion parameters; arguments are evaluated once, but expressions with side-effects can produce surprises.
-- Don’t over-constrain your `EXPECT_CALL` or assertions as it leads to brittle tests.
-- Use `EXPECT_CALL` before code exercising mocks; setting expectations after invoking mocks is undefined behavior.
-
----
-
-## 6. Troubleshooting Assertion Failures
-
-| Problem | Cause & Resolution |
-|---------|--------------------|
-| Assertion message is unclear or too generic | Use Predicate assertions or matchers to improve failure message clarity.
-| Test does not stop on failure as expected | Use `ASSERT_` macros for fatal failures or check control flow if in sub-functions.
-| Strings don’t compare as expected | Use `EXPECT_STREQ` for C strings, not `EXPECT_EQ`.
-| Floating-point comparisons fail unexpectedly | Switch to `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or use `EXPECT_NEAR` with a tolerance.
-| Mock expectations fail unexpectedly | Check call order (`InSequence`), exact argument matchers, and whether defaults are set properly with `ON_CALL`.
-
----
-
-## 7. Next Steps
-
-- Explore the [Assertions Reference](https://google.github.io/googletest/reference/assertions.html) for a comprehensive list.
-- Learn to define custom matchers and actions in the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html).
-- Deepen your mastery with practical exercises in [Writing Your First Test](https://google.github.io/googletest/guides/core-testing-workflows/writing-your-first-test) and [Using Assertions Effectively](https://google.github.io/googletest/guides/core-testing-workflows/using-assertions-effectively).
-
----
-
-### Additional Tips
-- Use matcher composition (`AllOf`, `AnyOf`) to clarify multifaceted assertions.
-- Use `EXPECT_THAT()` with gMock matchers even outside mocks for expressive assertions.
-- Label your tests and assertions clearly to help diagnose failures quickly.
-
----
-
-### Example: Using an `EXPECT_THAT` with a Matcher
-
-```cpp
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>
-
 using ::testing::StartsWith;
+using ::testing::MatchesRegex;
 
-TEST(StringTest, StartsWithHello) {
-  std::string greeting = "Hello, World!";
-  EXPECT_THAT(greeting, StartsWith("Hello")) << "Greeting should start with 'Hello'";
-}
+EXPECT_THAT(str, StartsWith("Hello"));
+EXPECT_THAT(code, MatchesRegex("\d{3}-\d{2}-\d{4}"));
 ```
 
-### Example: Custom Predicate-Formatter
+Matchers yield readable failure messages, improving debugging efficiency.
+
+---
+
+## 4. Structuring Assertions for Readability and Debugging
+
+### 4.1 Adding Custom Failure Messages
+You can append informative messages to any assertion to clarify failure context:
 
 ```cpp
-#include <gtest/gtest.h>
+EXPECT_EQ(result, expected) << "Expected result to equal the expected value";
+```
 
-// Predicate formatter checking that x is even.
-testing::AssertionResult IsEvenPredicate(const char* expr, int x) {
-  if (x % 2 == 0) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << expr << " evaluates to " << x << ", which is not even.";
+### 4.2 Avoiding Multiple Evaluations
+All GoogleTest assertions evaluate their arguments **exactly once**, making them safe against side effects or expensive operations.
+
+### 4.3 Using `SCOPED_TRACE` for Context in Helper Functions
+When assertions occur in helper functions called multiple times, differentiate failures using `SCOPED_TRACE`:
+
+```cpp
+void Helper(int n) {
+  SCOPED_TRACE(::testing::Message() << "In Helper with n=" << n);
+  EXPECT_EQ(Compute(n), expected_value);
 }
 
-TEST(NumberTest, EvenCheck) {
-  int val = 3;
-  EXPECT_PRED_FORMAT1(IsEvenPredicate, val);
+TEST(Foo, Bar) {
+  for (int i = 0; i < 5; ++i) {
+    Helper(i);
+  }
 }
 ```
 
-Failure message:
+Failure messages will include trace points to indicate which call failed.
+
+### 4.4 Propagating Fatal Failures from Subroutines
+Since `ASSERT_*` abort only the current function, use `ASSERT_NO_FATAL_FAILURE()` or check `HasFatalFailure()`:
+
+```cpp
+void Subroutine() {
+  ASSERT_EQ(x, y);  // aborts only Subroutine().
+}
+
+TEST(FooTest, Main) {
+  Subroutine();
+  if (HasFatalFailure()) return;  // Prevent further code on failure.
+  ...
+}
 ```
-Value of: val
-  Actual: 3
-Expected: IsEvenPredicate(val)
-Which is: val evaluates to 3, which is not even.
+
+Or set up a test event listener that throws exceptions on fatal failures for alternative control flow.
+
+---
+
+## 5. Practical Examples
+
+### 5.1 Basic Equality Check with Custom Message
+```cpp
+TEST(MathTest, Addition) {
+  int sum = Add(2, 3);
+  EXPECT_EQ(sum, 5) << "Sum did not match expected value.";
+}
+```
+
+### 5.2 Using Predicate Assertion for Complex Condition
+```cpp
+bool IsPrime(int n);  // returns true if n is a prime
+
+TEST(NumberTest, ChecksPrime) {
+  EXPECT_PRED1(IsPrime, 17);  // Will print argument if assertion fails
+}
+```
+
+### 5.3 Custom Predicate-Formatter for Detailed Message
+```cpp
+testing::AssertionResult AssertIsEven(const char* expr, int n) {
+  if (n % 2 == 0) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << expr << " (" << n << ") is odd";
+}
+
+TEST(MyTest, EvenCheck) {
+  EXPECT_PRED_FORMAT1(AssertIsEven, 3);  // Prints explanatory message on failure
+}
+```
+
+### 5.4 Using gMock Matcher for String Checking
+```cpp
+#include <gmock/gmock.h>
+using ::testing::HasSubstr;
+
+TEST(StringTest, ContainsSubstr) {
+  std::string text = "Hello, world!";
+  EXPECT_THAT(text, HasSubstr("world"));
+}
 ```
 
 ---
 
-<Info>
-Mastering GoogleTest assertions improves confidence in your code and reduces debugging time by making failures transparent and actionable. Start with simple assertions and progressively adopt matchers and user-defined predicates for precise, maintainable tests.
-</Info>
+## 6. Best Practices & Tips
+
+- Prefer specific comparison assertions like `EXPECT_EQ` over generic ones like `EXPECT_TRUE(x == y)` for better failure diagnostics.
+- Use `ASSERT_*` if subsequent test code depends on the success of the assertion.
+- For floating-point numbers, never use `EXPECT_EQ`; use `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR` instead.
+- Add meaningful messages with `<<` to clarify context in complex tests.
+- Use `SCOPED_TRACE` to add context from nested helper calls.
+- Write custom predicates or predicate-formatters for assertions that cannot be expressed simply.
+- Utilize `EXPECT_THAT` with gMock matchers for expressive, readable assertions on complex or container objects.
 
 ---
 
-#### Related Documentation
-- [Assertions Reference](https://google.github.io/googletest/reference/assertions.html)
-- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Writing Your First Test Case](https://google.github.io/googletest/getting-started/first-test-validation/writing-first-test-case.html)
-- [Mocking Reference](https://google.github.io/googletest/docs/reference/mocking.html)
-- [Advanced GoogleTest Topics](https://google.github.io/googletest/docs/advanced.html)
+## 7. Troubleshooting Common Assertion Issues
+
+### Problem: Test Continues After Fatal `ASSERT_*` Failure
+Remember that `ASSERT_*` aborts only the current function, not the entire test. To stop test execution after failure in a helper function, use `ASSERT_NO_FATAL_FAILURE()` or check `HasFatalFailure()`.
+
+### Problem: C String Comparisons Fail Unexpectedly
+`EXPECT_EQ` compares pointer addresses for C strings. Use `EXPECT_STREQ` to compare string contents.
+
+### Problem: Floating-point Values Fail Equality Checks
+Use floating-point-aware assertions like `EXPECT_FLOAT_EQ` or `EXPECT_NEAR` to avoid precision issues.
+
+### Problem: Assertion Messages Are Hard to Understand
+Add custom failure messages via streaming with `<<` or write predicate-formatters to create detailed messages.
+
+### Problem: Overloaded or Template Functions Don’t Work with Predicate Assertions
+Explicitly cast the function pointer to the expected signature.
+
+```cpp
+EXPECT_PRED1(static_cast<bool(*)(int)>(IsPositive), 5);
+```
+
+
+---
+
+## 8. Next Steps & Related Topics
+
+- Explore [Using Assertions Effectively](reference/assertions.md) for a full list of assertions.
+- Learn about [Writing Your First C++ Test](../guides/core-testing-workflows/writing-basic-tests) to get started writing tests with assertions.
+- Deepen your mastery with [Parameterized and Typed Tests](../guides/advanced-features-and-patterns/parameterized-and-typed-tests).
+- Use [Effective Mocking with GoogleMock](../guides/advanced-features-and-patterns/effective-mocking) to leverage matchers and expectations beyond assertions.
+- See [Troubleshooting Setup Issues](../getting-started/first-run-validation/troubleshooting-setup-issues) for common test writing problems.
+
+---
+
+For the complete assertion macro reference and detailed examples, see the [Assertions Reference](reference/assertions.md).
+
+
+---
+
+*This documentation page is part of the GoogleTest Guides section focused on Core Testing Workflows and expands on the overview found in the [Assertions Reference](reference/assertions.md).*
