--- a/guides/integration-and-optimization/continuous-integration-setup.mdx
+++ b/guides/integration-and-optimization/continuous-integration-setup.mdx
@@ -1,278 +1,234 @@
 ---
-title: "GoogleTest with Continuous Integration"
-description: "Step-by-step instructions for integrating GoogleTest into your CI/CD pipelines across Linux, macOS, and Windows. Covers automated test execution, reporting, and troubleshooting common setup issues."
+title: "Continuous Integration (CI) with GoogleTest"
+description: "How to embed your test runs into CI workflows. Example scripts and setup for running tests on Linux, macOS, and Windows, plus guidance on collecting and reporting results."
 ---
 
-# GoogleTest with Continuous Integration
+# Continuous Integration (CI) with GoogleTest
 
-Integrating GoogleTest into your Continuous Integration (CI) pipelines ensures automated, reliable, and repeatable validation of your C++ code. This guide walks you through practical, step-by-step instructions to embed GoogleTest test suites into CI workflows for Linux, macOS, and Windows environments. It covers automated test execution, generating reports, debugging failures, and common setup troubleshooting to keep your pipelines robust and maintainable.
+## Overview
 
----
+This guide helps you seamlessly embed your GoogleTest-powered test runs into your Continuous Integration (CI) workflows. It covers example scripts and practical advice for running tests across Linux, macOS, and Windows platforms. You'll also learn how to collect test results and generate reports that CI systems can consume efficiently.
 
-## 1. Understanding GoogleTest in CI Context
+## Prerequisites
 
-**What this guide covers:**
-- How to set up GoogleTest test executables for automated CI runs
-- Command-line options to control test execution
-- Generating machine-readable test reports for CI dashboards
-- Diagnosing and resolving common issues encountered during CI integration
+- A working GoogleTest test suite compiled into an executable.
+- Basic familiarity with your CI environment (e.g., Jenkins, GitHub Actions, GitLab CI).
+- Access to the command line on target CI systems.
+- (Optional) CMake or build system integration for test execution.
 
-**Prerequisites:**
-- A working build environment with GoogleTest compiled (see the [Installation via CMake](https://google.github.io/googletest/getting-started/setup-and-installation/installation-via-cmake) guide)
-- Familiarity with basic CMake or build system setup
-- Access to your CI provider (e.g., GitHub Actions, Jenkins, Travis CI)
+## Expected Outcome
 
-**Expected Outcome:**
-- GoogleTest binaries run automatically on CI
-- Test outputs are captured and interpreted by your CI server
-- Failures cause CI job failures with actionable logs
+By completing this guide, you will be able to automate running your GoogleTest suites within CI pipelines, capture meaningful console output, and generate XML reports for test result visualization and failure tracking.
 
-**Time Estimate:** ~45 minutes
+## Time Estimate
 
-**Difficulty Level:** Intermediate
+Configuring basic CI integration typically takes between 15 to 60 minutes depending on experience and CI system complexity.
+
+## Difficulty Level
+
+Intermediate: You should be comfortable with command line tools and basic CI pipeline configuration.
 
 ---
 
-## 2. Preparing Your Test Binaries for CI
+## 1. Running GoogleTest in CI Environments
 
-### Step 1: Build Your Test Executable
+GoogleTest executables are designed to run all tests automatically without additional registration. Your CI system needs only to invoke the test binary and interpret the results.
 
-Start by building your test executable linked against GoogleTest's `gtest_main` or `gmock_main` libraries.
+### Step 1: Build Your Tests in CI
 
-For example, using CMake:
+Ensure your CI pipeline compiles your test binaries correctly:
 
-```cmake
-add_executable(my_tests test_suite.cpp)
-target_link_libraries(my_tests GTest::gtest_main)
-```
-
-or for GoogleMock integration:
-
-```cmake
-add_executable(my_mock_tests mock_test_suite.cpp)
-target_link_libraries(my_mock_tests GMock::gmock_main)
-```
-
-This automatically provides a `main()` function that initializes GoogleTest and runs all registered tests.
-
-### Step 2: Enable Test Discovery (Optional but Recommended)
-
-Enable CMake's test discovery to integrate with `ctest`:
-
-```cmake
-enable_testing()
-
-add_test(NAME my_tests COMMAND my_tests)
-include(GoogleTest)
-gtest_discover_tests(my_tests)
-```
-
-This allows CI pipelines to invoke tests via `ctest` for better reporting integration.
-
-### Step 3: Run Tests Locally
-
-Before CI integration, verify that your test executable runs and reports as expected:
+- Use your existing CMake or build scripts.
+- For CMake, a simple invocation might be:
 
 ```bash
-./my_tests
+mkdir -p build && cd build
+cmake .. -DBUILD_GMOCK=OFF
+make
 ```
 
-Expected output will list tests running and their status, ending with a summary.
+- This step must succeed before test execution.
+
+### Step 2: Execute Tests
+
+Run your test executable as a command in your CI pipeline:
+
+```bash
+./path/to/your_test_binary
+```
+
+- By default, GoogleTest runs all registered tests and prints a summary.
+- The exit code is `0` if all tests pass; non-zero otherwise.
+
+### Step 3: Use GoogleTest Flags for CI-Friendly Output
+
+Enhance output by generating XML reports, which most CI servers can parse:
+
+```bash
+./your_test_binary --gtest_output=xml:report.xml
+```
+
+- The `--gtest_output=xml:<file>` flag writes detailed, machine-readable results.
+- Point your CI server’s test results parser to this XML file.
 
 ---
 
-## 3. Running GoogleTest in CI Pipelines
+## 2. Platform-Specific Example Scripts
 
-### Common Invocation Patterns
+Below are example shell snippets you can adapt for your CI environment.
 
-Run your test executable directly:
-
-```bash
-./my_tests
-```
-
-Or use CTest, which understands GoogleTest:
+### Linux/macOS Example
 
 ```bash
-ctest --output-on-failure
+#!/bin/bash
+set -e
+
+# Build tests
+mkdir -p build && cd build
+cmake ..
+make
+
+# Run tests with XML output
+./your_test_binary --gtest_output=xml:report.xml
+
+# Exit with test binary exit code
+exit $?
 ```
 
-### Use Flags to Control Output for CI
+### Windows Example (PowerShell)
 
-GoogleTest supports several command-line flags to make output parsing CI-friendly:
+```powershell
+# Navigate to build directory
+if (-Not (Test-Path build)) { New-Item -ItemType Directory -Path build }
+cd build
 
-- `--gtest_output=xml:<path>`  
-  Generates an XML report (compatible with many CI systems) at the given path.
+# Configure and build with CMake
+cmake ..
+cmake --build .
 
-- `--gtest_filter=PositiveTests*`  
-  To run a subset of tests.
+# Run tests with XML output
+.
+\your_test_binary.exe --gtest_output=xml:report.xml
 
-- `--gtest_shuffle`  
-  Runs tests in random order (good for detecting order dependencies).
-
-- `--gtest_repeat=N`  
-  Runs all tests N times to check for flakiness.
-
-#### Example for CI:
-
-```bash
-./my_tests --gtest_output=xml:test_results.xml
+# Exit with test exit code
+exit $LASTEXITCODE
 ```
-
-Most CI services can consume these XML reports and display rich test summaries.
 
 ---
 
-## 4. Integrating with Popular CI Systems
+## 3. Integrating Test Results into CI
 
-### GitHub Actions Example
+Most CI platforms like Jenkins, GitHub Actions, and GitLab have built-in support or plugins for parsing GoogleTest XML reports.
+
+### Jenkins
+
+- Use the [Google Test Plugin](https://plugins.jenkins.io/google-test/) or the XUnit plugin.
+- Configure the job to publish the test report from the XML generated.
+
+### GitHub Actions
+
+- Use community actions like `mikeal/google-test-reporter` or process the XML with your own scripts.
+
+### GitLab CI
+
+- Use the `junit` artifact option to upload the XML report:
 
 ```yaml
-name: C++ GoogleTest
-
-on: [push, pull_request]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: sudo apt-get install -y cmake g++
-    - name: Configure
-      run: cmake -S . -B build
-    - name: Build
-      run: cmake --build build
-    - name: Run tests
-      run: |
-        cd build
-        ctest --output-on-failure
-        # or directly
-        # ./my_tests --gtest_output=xml:test_results.xml
-    - name: Upload test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: build/test_results.xml
+test:
+  script:
+    - ./your_test_binary --gtest_output=xml:report.xml
+  artifacts:
+    reports:
+      junit: report.xml
 ```
 
-### Jenkins Example
+---
 
-- Configure a build step to run `cmake` and `make` to build tests.
-- Add a post-build action to "Publish JUnit test result report" and specify the GoogleTest XML report `**/test_results.xml`.
+## 4. Tips and Best Practices
 
-### Tips for Other CI Systems
+- **Always return the exit code from `RUN_ALL_TESTS()`** in your test main. This exit code informs the CI system about test success or failure.
 
-Most CI providers like Travis CI, CircleCI, and Azure Pipelines support JUnit XML reports generated by GoogleTest. Export results as XML using `--gtest_output=xml:filename` and publish accordingly.
+- **Generate XML reports** for richer integration with CI dashboards beyond console logs.
+
+- **Filter tests if needed** with `--gtest_filter=` to speed up CI runs, especially for large test suites.
+
+- Use `--gtest_repeat=N` to rerun tests multiple times for flaky test detection.
+
+- Configure test sharding if your CI system supports parallelization.
+
+- Capture and archive both console output and XML results for debugging.
+
+- Leverage GoogleTest flags like `--gtest_brief` or `--gtest_color` to control verbosity and readability in CI logs.
 
 ---
 
 ## 5. Troubleshooting Common CI Issues
 
-### Problem: Tests are running but CI does not detect failures
+### Tests Fail to Run or Are Not Detected
+
+- Verify tests are linked correctly and the test executable is up to date.
+- Confirm tests are not disabled (check test names starting with `DISABLED_`).
+- Use `--gtest_list_tests` to ensure tests are registered in the binary.
+
+### Exit Code Not Propagating
 
 - Ensure your `main()` function returns the result of `RUN_ALL_TESTS()`.
-- Use `ctest` or confirm your CI parses GoogleTest XML outputs.
-- Avoid suppressing test failures via flag misuse.
+- Avoid swallowing exit codes in wrapper scripts.
 
-### Problem: Tests are flaky or order-dependent
+### XML Report Not Generated or Invalid
 
-- Use `--gtest_shuffle` in your CI runs.
-- Investigate shared state or static/global variables among tests.
+- Verify file write permissions in your CI workspace.
+- Check for correct usage of `--gtest_output=xml:<file>` flag.
 
-### Problem: XML report not generated or malformed
+### Flaky Tests or Random Failures
 
-- Confirm `--gtest_output=xml:<file>` flag usage is correct.
-- Check file path permissions in the CI environment.
-
-### Problem: Build fails on CI but builds locally
-
-- Verify CI environment matches local toolchain versions.
-- Check C++ standard compliance (C++17 required minimum).
-- Make sure GoogleTest and GoogleMock libraries are correctly installed and linked.
+- Use `--gtest_repeat` combined with `--gtest_shuffle` to identify intermittent failures.
+- Investigate shared resource contention or dependencies between tests.
 
 ---
 
-## 6. Best Practices for Smooth CI Integration
+## 6. Continuous Integration Workflow Diagram
 
-- **Use `gtest_main` or `gmock_main` Libraries:** These provide a ready-to-use `main()` that handles initialization.
-- **Return `RUN_ALL_TESTS()` Result:** Always ensure your `main()` returns this value to signal test success/failure.
-- **Leverage XML Output:** Produce XML test reports and use your CI's native support for detailed results.
-- **Run Tests via CTest When Possible:** Improves integration, parallel runs, and output control.
-- **Automate Test Discovery:** Use `gtest_discover_tests()` in CMake to automate test registration.
-- **Address Flaky Tests:** Run with shuffling and repetitions in CI to detect flakiness early.
-
----
-
-## 7. Additional Resources
-
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) - Learn basic test writing
-- [Installing and Configuring GoogleTest](https://google.github.io/googletest/guides/getting-started/installing-and-configuring) - Setup and integration
-- [Troubleshooting Common Setup Issues](https://google.github.io/googletest/getting-started/troubleshooting-and-resources/common-setup-issues) - Fix common build and configuration problems
-- [CMake Integration Quickstart](https://google.github.io/googletest/quickstart-cmake.html) - Build integration best practices
-- [GoogleTest with Bazel](https://google.github.io/googletest/getting-started/setup-and-installation/installation-via-bazel) - Alternative build system
-
----
-
-## Appendix: Example `main()` Using GoogleMock
-
-If using GoogleMock, your binary can link with `gmock_main` which provides this `main()`:
-
-```cpp
-#include "gmock/gmock.h"
-#include "gtest/gtest.h"
-
-int main(int argc, char **argv) {
-  testing::InitGoogleMock(&argc, argv);  // Initializes both GoogleMock and GoogleTest
-  return RUN_ALL_TESTS();
-}
+```mermaid
+flowchart TD
+  A[CI Pipeline Starts] --> B[Checkout Code]
+  B --> C[Build Test Executable]
+  C --> D{Build Success?}
+  D -- No --> E[Fail Build]
+  D -- Yes --> F[Run Test Executable with GoogleTest]
+  F --> G[Capture Console Output]
+  F --> H[Generate XML Report]
+  H --> I[Upload Report to CI Server]
+  G --> J[Analyze Test Results]
+  I --> J
+  J --> K{Tests Passed?}
+  K -- No --> L[Mark Build as Failed]
+  K -- Yes --> M[Mark Build as Passed]
+  L --> N[Developer Notification]
+  M --> O[Deploy / Next Steps]
 ```
 
-This is automatically provided if you link against `gmock_main`.
+---
+
+## 7. Next Steps & Resources
+
+- Review the [GoogleTest Primer](https://google.github.io/googletest/primer.html) for an in-depth understanding of writing tests.
+- Explore the [Building and Running Tests in Real Projects](../build-and-run-integration) guide for detailed build system integration.
+- Consult your specific CI provider's documentation for configuring test result parsing.
+- Investigate [Scaling and Optimizing Test Suites](../scaling-and-optimizing-test-suites) to improve CI speed.
 
 ---
 
-# Troubleshooting Checklist
+## 8. References
 
-<AccordionGroup title="Common CI Troubleshooting">
-<Accordion title="Test Executable Does Not Run in CI">
-- Verify build steps complete successfully.
-- Check executable permissions in CI environment.
-- Confirm the executable path is correct.
-- Ensure dependencies and environment variables are properly set.
-</Accordion>
-<Accordion title="Test Failures Not Detected by CI">
-- Make sure the return value of `RUN_ALL_TESTS()` is propagated from `main()`.
-- Use `ctest` if your CI supports it.
-- Enable GoogleTest XML output and configure CI to consume it.
-</Accordion>
-<Accordion title="Test Output Too Verbose or Hard to Parse">
-- Use `--gtest_brief=1` for succinct outputs.
-- Limit output to failed cases with `--gtest_also_run_disabled_tests` if appropriate.
-- Generate XML and use CI native visualization.
-</Accordion>
-</AccordionGroup>
+- [GoogleTest User Guide](https://google.github.io/googletest/)
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
+- [GoogleTest Command Line Flags](https://google.github.io/googletest/reference/advanced.html#running-a-subset-of-the-tests)
+- [GoogleTest XML Output](https://google.github.io/googletest/reference/advanced.html#generating-xml-output)
+- [CI Integration Examples](https://github.com/google/googletest/tree/main/docs/examples)
 
 ---
-
-# Summary
-
-- GoogleTest integrates smoothly with modern CI systems supporting C++.
-- Use `gtest_main` or `gmock_main` libraries to get a standard `main()`.
-- Generate XML reports with `--gtest_output` for CI dashboard ingestion.
-- Troubleshoot typical CI issues by verifying executables and output parsing.
-- Leverage CMake and CTest for standardized build and test discovery.
-
----
-
-Start automating your C++ test suites now to catch bugs early and keep your releases reliable with GoogleTest in your CI pipeline.
-
 
 <Check>
-Ensure you have installed GoogleTest and configured your build system before enabling CI integration. For installation details, see the 'Installation via CMake' and 'Building from Source' guides.
+Remember: Automating tests and collecting results responsibly ensures your CI pipeline remains a reliable gatekeeper for quality and stability.
 </Check>
-
-<Info>
-For advanced scenarios, consider exploring parallel test execution and integration with test flakiness detection tools to enhance your CI workflows.
-</Info>
