--- a/concepts/core-architecture/mocking-architecture.mdx
+++ b/concepts/core-architecture/mocking-architecture.mdx
@@ -1,261 +1,299 @@
 ---
-title: "Mocking Architecture and Behavior Control"
-description: "Dive into the core mechanisms that power the mocking capabilities of GoogleMock. Learn how mock classes are constructed, how expectations and actions are specified, and how the engine manages call verification and default behaviors."
+title: "Mocking Architecture & Integration"
+description: "Learn how GoogleMock extends GoogleTest with a powerful mocking subsystem. Understand the interplay between mock class specification, expectation setup, call matching, and verification, as well as the integration with the core test runner."
 ---
 
-# Mocking Architecture and Behavior Control
+# Mocking Architecture & Integration
 
-Dive into the core mechanisms that power the mocking capabilities of GoogleMock. This guide explains how mock classes are constructed, how expectations and actions are specified, and how GoogleMock manages call verification and default behaviors to empower precise and flexible mocking in C++ tests.
+GoogleMock extends GoogleTest with a powerful and expressive mocking subsystem that enables developers to validate interactions between objects in C++ tests. This page explains how mocking integrates deeply into the core test execution lifecycle, detailing the user-centric workflow from mock class definition to expectation verification.
 
 ---
 
-## Overview of Mocking in GoogleMock
+## Overview of Mocking in GoogleTest
 
-GoogleMock automates the creation of mock classes and provides a rich, expressive syntax to specify how these mock objects behave and verify interactions with tested code. At its core, GoogleMock manages two central concepts:
+Mocking is a technique to replace real objects with *mock* objects that simulate behavior and allow inspection of interactions. GoogleMock provides macros and classes to simplify this process for C++ developers, enabling:
 
-- **Expectations:** Statements about which mock method calls are expected, how many times, with what arguments, and what they should do.
-- **Default Actions:** The behavior of mock methods when no explicit expectation matches a call.
+- Automatic generation of mock classes and methods
+- Specification of expected calls with precise argument matching
+- Control over call counts, order, and behavior
+- Verifications enforced at runtime with clear diagnostics
 
-GoogleMock’s mock objects intercept method calls, match them against specified expectations or default actions, execute predefined behaviors, and report unexpected or unmet calls.
+This integration significantly improves test reliability, speed, and clarity by isolating components and verifying their collaboration.
 
+<Info>
+Mocking is entirely user-driven. Expectations and default behaviors must be explicitly specified in tests to guide mock behavior and validation.
+</Info>
 
-## Constructing Mock Classes
+---
 
-Mock classes are written by inheriting from abstract interfaces and defining mock methods using the `MOCK_METHOD` macro. This macro declares mock methods that:
+## Mock Class Specification
 
-- Replace virtual functions of the base class.
-- Support specifying constness, calling conventions, and other qualifiers.
-- Support overloaded methods through explicit signatures and disambiguation utilities.
+The core of mocking in GoogleMock revolves around defining mock classes that inherit from interfaces or abstract classes. These mocks:
 
-**Example:**
+- Implement the same methods as the real class/interface, using the `MOCK_METHOD` macro
+- Are generated with internal machinery registering expectations and default behaviors
+
+### Defining Mock Methods
+
+Mock methods are defined in the `public:` section of a mock class with the `MOCK_METHOD` macro in the following format:
+
 ```cpp
-class MockFoo : public Foo {
+MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
+```
+
+Qualifiers can include `const`, `override`, `noexcept`, calling conventions, and reference qualifiers.
+
+#### Example:
+
+```cpp
+class MockTurtle : public Turtle {
  public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(string, Describe, (const char* name), (override));
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
 };
 ```
 
-Mock methods become the interception points where GoogleMock takes control to enforce behaviors and verify calls.
+<Note>
+All pure virtual methods must be mocked or overridden to avoid abstractness.
+</Note>
 
+---
 
-## Specifying Behavior: Expectations and Default Actions
+## Setting Expectations and Default Actions
 
-GoogleMock provides two macros that form the declarative syntax for specifying mock behavior:
+Once mock classes are defined, developers specify how mocks should behave during tests with two primary macros:
 
-### ON_CALL
+### 1. `EXPECT_CALL` — Setting Call Expectations
 
-Use `ON_CALL(mock, Method(matchers))` to specify the **default behavior** of a mock method when it is called with arguments matching the matchers. This does *not* set an expectation that the call must happen — it only defines how the call behaves if it does happen.
-
-Chainable modifiers:
-- `.With(multi_arg_matcher)` — restricts to calls whose argument tuple matches the specified matcher.
-- `.WillByDefault(action)` — defines the action to perform when the default behavior is invoked.
-
-
-### EXPECT_CALL
-
-Use `EXPECT_CALL(mock, Method(matchers))` to set an **expectation** that a mock method will be called with arguments matching the matchers. This macro helps verify *if, how many times*, and *in what order* the call occurs.
-
-Chainable modifiers:
-- `.With(multi_arg_matcher)` — refines argument matching.
-- `.Times(cardinality)` — specifies how many times the call is expected (e.g., `Exact(n)`, `AtLeast(n)`, `AnyNumber()`).
-- `.InSequence(sequence...)` — defines partial order sequences of calls.
-- `.After(expectations...)` — restricts calls to happen only after specified expectations.
-- `.WillOnce(action)` — defines behavior for the first matching call(s).
-- `.WillRepeatedly(action)` — defines behavior after all `.WillOnce()`s are exhausted.
-- `.RetiresOnSaturation()` — retires the expectation once it is saturated.
-
-
-## Matching Incoming Calls to Expectations and Default Actions
-
-When a mock method is called, GoogleMock searches its expectations in reverse order (newest first) for an active expectation that matches the call arguments and whose pre-requisites are satisfied.
-
-- If a matching expectation is found and not saturated, its next action is performed.
-- If an expectation is saturated or retired, GoogleMock skips it and looks for a suitable one.
-- If no expectation matches, GoogleMock looks for a matching default action (from `ON_CALL`) and performs that.
-- If no match is found and the call is uninteresting, GoogleMock follows the configured reaction (allow, warn, or fail).
-
-
-## Sequencing Calls and Managing Call Order
-
-### Sequences with `InSequence` object
-
-You can enclose a set of expectations within an `InSequence` block to declare that the calls must occur in the order declared:
+`EXPECT_CALL(mock_object, Method(matchers))` specifies expectations on when and how often mock methods are called, with what arguments, and what actions they should perform.
 
 ```cpp
-{
-  InSequence s;
-  EXPECT_CALL(mock, A());
-  EXPECT_CALL(mock, B());
-}
+EXPECT_CALL(turtle, Forward(100))
+    .Times(AtLeast(1))
+    .WillOnce(Return());
 ```
 
-This ensures that `A()` must be called before `B()`.
+Key aspects:
 
-### Partial order with `InSequence` clause
+- **Matchers** specify which calls to expect (argument predicates, wildcards, or specific values).
+- **Cardinalities** (`Times()`) define how many times the call should occur.
+- **Actions** (`WillOnce()`, `WillRepeatedly()`) define what the mock method does when called.
+- Expected call order can be controlled with `.InSequence()` and `.After()`.
 
-To express more complex partial orders, create `Sequence` objects and specify which expectations belong to which sequences:
+<Warning>
+Expectations must be set **before** the mock method is called; otherwise behavior is undefined.
+</Warning>
+
+### 2. `ON_CALL` — Defining Default Behaviors Without Expectations
+
+`ON_CALL(mock_object, Method(matchers))` sets default actions for mock methods without enforcing call counts. These default actions are invoked when no matching `EXPECT_CALL` applies.
 
 ```cpp
-Sequence s1, s2;
-EXPECT_CALL(mock, Foo()).InSequence(s1, s2);
-EXPECT_CALL(mock, Bar()).InSequence(s1);
-EXPECT_CALL(mock, Baz()).InSequence(s2);
+ON_CALL(turtle, Forward(_))
+    .WillByDefault(Return());
 ```
 
-This builds a DAG of ordering constraints.
+Use `ON_CALL` for common default responses, and `EXPECT_CALL` to enforce behavior and verify test correctness.
 
-### `After` clause
+---
 
-You can also specify explicit prerequisite expectations which must be satisfied before another call can occur:
+## Call Matching and Invocation Flow
+
+When your code under test invokes a mock method:
+
+1. GoogleMock finds the most recent matching expectation (`EXPECT_CALL`) that is active and whose arguments match.
+2. If none is found, it falls back to the default action defined by the appropriate `ON_CALL` spec.
+3. If no default action exists, a built-in default action is used (e.g., returning zero, false, or default constructor).
+4. GoogleMock increments call counts and verifies cardinalities to detect violations immediately.
+
+This process happens atomically and thread-safely to prevent race conditions.
+
+---
+
+## Expectation Management and Verification
+
+Expectations and default actions are tracked internally per mock object. When an expectation is saturated or an ordering prerequisite is met, expectations may retire to prevent further matching.
+
+Verification is performed automatically when a mock object is destructed. If any expectations are unmet or violated:
+
+- GoogleMock emits detailed non-fatal failures with source locations and call histories.
+- Tests fail with informative messages to aid debugging.
+
+You can also force verification explicitly using:
 
 ```cpp
-Expectation e1 = EXPECT_CALL(mock, Init1());
-ExpectationSet init_set;
-init_set += EXPECT_CALL(mock, Init2());
-EXPECT_CALL(mock, Use()).After(e1, init_set);
+Mock::VerifyAndClearExpectations(&mock_object);
 ```
 
+---
 
-## Handling Call Violations
+## Controlling Mock Strictness
 
-GoogleMock detects and reports several call violations:
+GoogleMock supports different mock strictness levels:
 
-- **Unexpected calls:** Calls that do not match any active expectation, unlike uninteresting calls which have no expectation at all.
-- **Excessive calls:** Calls that exceed the upper limit specified by the expectation's cardinality.
-- **Unsatisfied expectations:** Expectations that were expected but not met by test end.
+- **NaggyMock (default):** Warns on uninteresting calls.
+- **NiceMock:** Suppresses warnings on uninteresting calls.
+- **StrictMock:** Treats uninteresting calls as fatal failures.
 
-Violation reporting includes argument mismatches, call count state, and helpful diagnostic messages.
-
-
-## Default Behavior for Uninteresting and Unexpected Calls
-
-By default, uninteresting calls (calls to methods with no expectations) generate warnings but proceed with the default action (usually a default value for the return type or doing nothing for `void` functions).
-
-Unexpected calls (calls with no matching expectations) trigger errors or failures depending on mock strictness.
-
-The verbosity of such messages and reactions can be controlled globally or on a per-mock-object basis using `NiceMock`, `NaggyMock` (default), or `StrictMock` wrappers.
-
-
-## Expectation Lifetime and Retiring
-
-Expectations remain **sticky** by default — they stay active even after saturation unless explicitly told to retire via `.RetiresOnSaturation()`. Expectations belonging to sequences automatically retire to maintain order.
-
-Retirement simplifies partial order verification and avoids matching saturated expectations.
-
-
-## Lifecycle Operations on Mocks
-
-- **Verification on Destruction:** When a mock object is destroyed, GoogleMock verifies that all its expectations are satisfied and reports any violations.
-- **Manual Verification:** Call `Mock::VerifyAndClearExpectations(&mock_obj)` to verify and clear expectations before destruction.
-- **Clear Default Actions:** Call `Mock::VerifyAndClear(&mock_obj)` to also clear any default actions set by `ON_CALL`.
-- **Allowing Leaks:** Use `Mock::AllowLeak(&mock_obj)` to suppress leak detection warnings for a mock object.
-
-
-## Under-the-Hood Concurrency Control
-
-GoogleMock synchronizes all mock method calls and expectation checking with a global mutex to protect internal state, guaranteeing thread-safe behavior when accessing mocks concurrently (assuming test setup and teardown are done single-threaded).
-
-
-## Summary Example
+You can easily wrap your mock types with these templates:
 
 ```cpp
-class MockFoo : public Foo {
+NiceMock<MockFoo> nice_mock;
+StrictMock<MockFoo> strict_mock;
+```
+
+This controls how GoogleMock treats calls to mock methods without explicit expectations.
+
+---
+
+## Ordering Mock Calls
+
+GoogleMock enables specifying call order to verify interaction sequences:
+
+- Use `InSequence` (RAII scoped object) to enforce strict order on expectations created in its context.
+- Use `.InSequence()` clause on individual expectations to include them in one or more sequences.
+- Use `.After()` clauses to specify that a call must happen after one or more other expectations.
+
+These tools allow precise modeling of complex partial orders in test scenarios.
+
+---
+
+## Integration with GoogleTest Lifecycle
+
+Mock objects partake fully in the GoogleTest test case lifecycle:
+
+1. **Setup Phase:** Define mocks, set default behaviors (`ON_CALL()`), and expectations (`EXPECT_CALL()`).
+2. **Test Execution Phase:** Code under test calls mock methods. GoogleMock intercepts calls, verifies expectations immediately, and performs specified actions.
+3. **Teardown Phase:** Mock objects are destructed, triggering verification of any remaining expectations.
+
+Failures detected in verification become part of the test's result and report with stack traces and locations.
+
+<Note>
+GoogleMock and GoogleTest coordinate synchronization internally to ensure thread safety and integrity during concurrent test runs.
+</Note>
+
+---
+
+## Common Workflow Example
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+using ::testing::_;
+using ::testing::Return;
+using ::testing::AtLeast;
+
+// Interface
+class Turtle {
  public:
-  MOCK_METHOD(int, Compute, (int x), (override));
+  virtual ~Turtle() {}
+  virtual void PenDown() = 0;
+  virtual void Forward(int) = 0;
 };
 
-TEST(FooTest, Example) {
-  MockFoo mock;
+// Mock
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int), (override));
+};
 
-  ON_CALL(mock, Compute(_)).WillByDefault(Return(0));
+// Code under test
+class Painter {
+ public:
+  explicit Painter(Turtle* t) : turtle_(t) {}
+  bool DrawCircle(int x, int y, int radius) {
+    turtle_->PenDown();
+    turtle_->Forward(radius);
+    //... other drawing logic ...
+    return true;
+  }
 
-  EXPECT_CALL(mock, Compute(10))
-      .Times(2)
-      .WillOnce(Return(5))
-      .WillRepeatedly(Return(7))
-      .RetiresOnSaturation();
+ private:
+  Turtle* turtle_;
+};
 
-  EXPECT_EQ(mock.Compute(10), 5);
-  EXPECT_EQ(mock.Compute(10), 7);
-  EXPECT_EQ(mock.Compute(15), 0);  // Uses ON_CALL default
+// Test
+TEST(PainterTest, DrawsSomething) {
+  MockTurtle turtle;
+  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
+  EXPECT_CALL(turtle, Forward(_)).Times(1);
+
+  Painter painter(&turtle);
+  EXPECT_TRUE(painter.DrawCircle(0, 0, 10));
 }
 ```
 
+---
 
-## Practical Tips and Pitfalls
+## Troubleshooting Mock Integration Issues
 
-- **Order of Expectations:** For multiple expectations on the same method, place more specific expectations after more general ones because GoogleMock matches in reverse order.
-- **Use `ON_CALL` for defaults:** Reserve `EXPECT_CALL` for calls you want to verify; use `ON_CALL` for behavior defaults.
-- **RetiresOnSaturation:** Use when you want an expectation to deactivate after reaching its call limit, preventing upper-bound violations on repeated calls.
-- **Sequences:** Use `InSequence` or `After` to express call order constraints clearly.
-- **Verbose Output:** Increase verbosity with `--gmock_verbose=info` to trace call matching when debugging.
-- **Don't set expectations after calls:** Always set mocks’ expectations before the code using them is exercised.
+- **Uninteresting Calls Warning:** Occurs when a mock method without expectations is called. Address by adding `EXPECT_CALL(...).Times(AnyNumber())` or using `NiceMock`.
 
+- **Unexpected Calls Error:** Happens when a call does not match any active expectation. Verify your matchers and call sequences.
 
-## Diagram: Mocking Architecture and Behavior Flow
+- **Leaked Mock Objects:** GoogleMock detects mocks that are never deleted and reports errors. Use `Mock::AllowLeak()` to suppress warnings if intentional.
+
+- **Ordering Violations:** Use sequences and `.After()` to fix call order mismatches.
+
+- **Multiple Conflicting Expectations:** Remember that GoogleMock picks expectations in reverse declaration order. More specific expectations should be declared after general catch-alls.
+
+<Check>
+Verify that mock classes have virtual destructors to avoid memory errors and heap leaks.
+</Check>
+
+---
+
+## Visualizing Mocking Architecture
 
 ```mermaid
 flowchart TD
-  A[Code under test calls mock method]
-  B(Mock method interceptor)
-  C{Are there any EXPECT_CALL expectations?}
-  D[Find matching EXPECT_CALL in reverse order]
-  E{MATCH found and expectation active?}
-  F[Perform matching EXPECT_CALL action]
-  G{Are EXPECT_CALL Actions exhausted?}
-  H[Take default EXPECT_CALL action or default action]
-  I{No matching EXPECT_CALL found}
-  J[Find matching ON_CALL default action]
-  K{ON_CALL match found?}
-  L[Perform ON_CALL default action]
-  M[Call built-in default action]
-  N{Is call uninteresting or unexpected?}
-  O[Report warning or error based on mock strictness]
-  P[Return or void from mock method]
+  subgraph Test Setup
+    MockClassDef([Mock Class Definition]) --> SetExpectations{Set EXPECT_CALL/ON_CALL}
+  end
 
-  A --> B
-  B --> C
-  C -->|Yes| D
-  C -->|No| I
-  D --> E
-  E -->|Yes| F
-  E -->|No| I
-  F --> G
-  G -->|No| F
-  G -->|Yes| H
-  H --> P
-  I --> J
-  J --> K
-  K -->|Yes| L
-  K -->|No| M
-  L --> P
-  M --> N
-  N -->|Yes| O
-  N -->|No| P
-  O --> P
+  subgraph Test Execution
+    CodeUnderTest("
+Code Under Test") -->|Calls mock methods| MockMethods(Mock Methods Invocation)
+    MockMethods --> MatchExpectations{Find matching EXPECT_CALL}
+    MatchExpectations -->|Found| ExecuteAction[Execute WillOnce/WillRepeatedly]
+    MatchExpectations -->|Not Found| DefaultAction[Invoke ON_CALL or Built-in Default]
+    ExecuteAction --> VerifyCall[Update call count & verify expectations]
+  end
+
+  subgraph Test Teardown
+    MockObjectDestruct(Mock Object Destruction) --> VerifyExpectations[Verify all EXPECT_CALL expectations]
+  end
+
+  SetExpectations --> CodeUnderTest
+  VerifyCall --> CodeUnderTest
+  VerifyExpectations --> TestResult("
+Report test result/error")
+  VerifyExpectations -->|Failures| TestResult
 ```
-
-*This diagram illustrates how GoogleMock intercepts calls, attempts to match expectations, executes associated actions, and handles calls with default behaviors or violations.*
-
-
-## Troubleshooting Common Issues
-
-- **Uninteresting Call Warnings:** Seeing "Uninteresting mock function call" means a mock method was called without a matching `EXPECT_CALL`. Consider adding an `EXPECT_CALL(...).Times(AnyNumber())` if the call is expected, or use a `NiceMock` wrapper.
-- **Unexpected Call Failures:** Occur when a mock method is called with arguments not matching any `EXPECT_CALL`. Verify your matchers and ensure the test sets appropriate expectations.
-- **Call Count Mismatch:** Happens if `EXPECT_CALL` cardinalities are not met. Use the GoogleMock verbose output and stack traces to identify missing or excessive calls.
-- **Order Violations:** When using sequences, calls out of order cause failures. Make sure that call order matches expectations.
-
-
-## Further Reading and Related Documentation
-
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): User-friendly beginner guide to mocking.
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html): Quick reference for mocking and expectations.
-- [Mocking Reference](../api-reference/mocking-framework/mock-objects-and-methods.md): Detailed API documentation.
-- [Actions, Matchers, and Extensions](../api-reference/actions-matchers-extensions/action-templates-and-custom-actions.md): How to customize mock behavior.
-- [Mock Strictness Guide](../guides/practical-testing-patterns/mock-strictness.md): Managing behaviour on uninteresting calls.
-
 
 ---
 
-This page provides a detailed yet accessible explanation to empower users to understand and master GoogleMock’s core mocking architecture and behavior control mechanisms, leading to more effective unit testing and robust software designs.
+## Summary
+
+GoogleMock tightly integrates mocking constructs into the GoogleTest framework, streamlining creation, execution, and verification of mock interactions in C++ test workflows. This architecture empowers developers to craft resilient, fast, and readable unit tests emphasizing inter-object behaviors.
+
+---
+
+## Further Reading & References
+
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly introduction and usage patterns.
+- [Mocking Reference](../reference/mocking.md): Overview of macros, classes, and usage.
+- [Setting Expectations](../api-reference/googlemock-api/setting-expectations.md): Detailed patterns and clauses for `EXPECT_CALL` and `ON_CALL`.
+- [Creating & Using Mocks](../api-reference/googlemock-api/creating-and-using-mocks.md): Guidance on defining mock classes.
+- [Nice, Naggy & Strict Mocks](../api-reference/googlemock-api/nice-strict-mocks.md): Controlling uninteresting call behavior.
+- [Effective Mocking with GoogleMock](../../guides/advanced-features-and-patterns/effective-mocking.md): In-depth guide on best practices.
+- [Test Case Lifecycle & Execution Flow](./test-lifecycle.md): Understanding GoogleTest integration.
+
+---
+
+For hands-on integration guidance, see **Building and Running Tests in Real Projects** and **Continuous Integration (CI) Setup** in the Integration & Optimization guides.
+
+
